syntax = "proto3";

package kingsol;

service KingsolAPI {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Create(CreateRequest) returns (CreateResponse) {}
}

message Link {
  string key = 1;
  string link = 2;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  Link link = 1;
}

message ListRequest {}
message ListResponse {
  repeated Link links = 1;
}

message CreateRequest {
  Link link = 1;
  bool override = 2;
}
message CreateResponse {}
